--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <section class="contact">
         <h2>Contact Me</h2>
-        <p>Email: <a href="mailto:shaaan@example.com">shaaan@example.com</a></p>
+        <p>Email: <a href="mailto:shaaanmankash@gmail.com">shaaan@example.com</a></p>
     </section>
 
     <footer>
@@ -104,3 +104,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
