--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <section class="contact">
         <h2>Contact Me</h2>
-        <p>Email: <a href="mailto:shaaan@example.com">shaanmankash@gmail.com</a></p>
+        <p>Email: <a href="mailto:shaaanmankash@gmail.com">shaanmankash@gmail.com</a></p>
     </section>
 
     <footer>
@@ -104,5 +104,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
